@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.6 2003/04/17 04:56:34 uebayasi Exp $
+$NetBSD: distinfo,v 1.7 2004/09/10 16:33:57 uebayasi Exp $
 
-SHA1 (flim-1.14.5.tar.gz) = b5a1a8fe382e2a225441fee2f5e583bdb89b775b
-Size (flim-1.14.5.tar.gz) = 178075 bytes
+SHA1 (flim-1.14.6.tar.gz) = e8ca196cec4b84fd0a34653ac3c8a976426f2486
+Size (flim-1.14.6.tar.gz) = 178761 bytes
 SHA1 (patch-ab) = 3818258269cb432cb95fe02e22ed03f98400e31f
 SHA1 (patch-ac) = 62c3df484e393f798f16200a0970e7d7ea37b308
